# maixduino-playground

./: .gitignore  Cargo.toml  README.md  build.rs  flash.sh  memory.x  pyproject.toml  rust-toolchain.toml  wifi_creds.env.example
.cargo/: config.toml
.claude/: settings.json
docs/: README.md  finding-the-led.md  hardware-maixduino.md  toolchain.md  traps-crates-and-firmware.md  traps-linker-and-abi.md
esp32-firmware/: README.md  boot_k210_enable.py  enter_dl_robust.py  flash-esp32.sh  hold_gpio0_high.py  restore-nina-fw.sh
esp32-modem/: README.md  platformio.ini
esp32-modem-ninafw/: README.md  flash-nina-uart.sh  sketch.ino.cpp  wificlient-blocking-write.patch
esp32-modem/src/: main.cpp
src/: dmac.rs  dvp.rs  jpeg.rs  main.rs  nina.rs  rtc.rs  uart_wifi.rs
tools/: bmp2png.py  gen_jpeg_tables.py  grab.py  live.py  stream.py
